--- a/SistemaVentaBlazor/Client/Shared/MainLayout.razor
+++ b/SistemaVentaBlazor/Client/Shared/MainLayout.razor
@@ -15,7 +15,7 @@
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="1">
         <MudDrawerHeader>
-            <MudText Typo="Typo.h6">Sistema de venta</MudText>
+            <MudText Typo="Typo.h6">Beauty Sales</MudText>
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
