--- a/SistemaVentaBlazor/Client/wwwroot/css/app.css
+++ b/SistemaVentaBlazor/Client/wwwroot/css/app.css
@@ -9,17 +9,17 @@ h1:focus {
 }
 
 a, .btn-link {
-    color: #0071c1;
+    color: #feb4a6;
 }
 
 .btn-primary {
     color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    background-color: #feb4a6;
+    border-color: #feb4a6;
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #feb4a6;
 }
 
 .content {
